docs/version-1.11/modules/en/pages/volumes/volume-conditions.adoc
= Volume Conditions
:revdate: 2025-12-22
:page-revdate: {revdate}
:current-version: {page-component-version}

== Volume Conditions

Volume conditions describe the current status of a volume and potential issues that may occur.

* `Scheduled`: All replicas were scheduled successfully.
  If Longhorn was unable to schedule any of the replicas, the condition is set to `false` and error messages are displayed. The condition is set to `true` when the setting xref:longhorn-system/settings.adoc#_allow_volume_creation_with_degraded_availability[Allow Volume Creation With Degraded Availability] is enabled and at least one replica is scheduled.
* `TooManySnapshots`: This specific volume has more than 100 snapshots.
  Longhorn allows you to create a maximum of 250 snapshots for each volume. For more information about configuring the maximum snapshot count, see xref:snapshots-backups/volume-snapshots-backups/snapshot-space-management.adoc[Snapshot Space Management].
* `Restore`: Longhorn is restoring the volume from a backup.
* `WaitForBackingImage`: The replicas have not started because the backing images must first be synced with their disks.
* `OfflineRebuildingInProgress`: The volume is being rebuilt using offline rebuilding.

== Engine Conditions

Engine conditions describe the current status of an engine and potential issues that may occur.
`FilesystemReadOnly`: The state of the current volume mount point has changed to read-only.
This change may prevent workloads from writing data to the volume. For troubleshooting information, see xref:high-availability/volume-recovery.adoc[].

== Replica Conditions

Replica conditions describe the current status of a replica and potential issues that may occur.

* `RebuildFailed`: The replica failed to rebuild.
* `WaitForBackingImage`: The replicas have not started because the backing images must first be synced with their disks.
